oepcie/liboepcie/oepcie.h

typedef uint32_t oe_reg_addr_t;
typedef uint32_t oe_reg_val_t;
// Context
typedef struct oe_ctx_impl *oe_ctx;
// Context manipulation
OE_EXPORT oe_ctx oe_create_ctx();
OE_EXPORT int oe_init_ctx(oe_ctx ctx);
// Option getting/setting
OE_EXPORT int oe_get_opt(const oe_ctx ctx, int option, void* value, size_t *size);
OE_EXPORT int oe_set_opt(oe_ctx ctx, int option, const void* value, size_t size);
// Hardware inspection, manipulation, and IO
OE_EXPORT int oe_read_reg(const oe_ctx ctx, size_t dev_idx, oe_reg_addr_t addr, oe_reg_val_t *value);
OE_EXPORT int oe_write_reg(const oe_ctx ctx, size_t dev_idx, oe_reg_addr_t addr, oe_reg_val_t value);
//OE_EXPORT int oe_write_frame(const oe_ctx ctx, oe_frame_t *frame);

// Internal type conversion
OE_EXPORT void oe_version(int *major, int *minor, int *patch);
OE_EXPORT const char *oe_error_str(int err);
OE_EXPORT const char *oe_device_str(int dev_id);